docs: the adoption ledger carries its counts at 1eeca60
Claude-Session: https://claude.ai/code/session_01Cu9urQP8yDyC152uaDPPr2